--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Wild Rydes - Rydes of the Future!</title>
+  <title>Wild Rydes - Rydes of the Future!!</title>
 
 </title>
 
